--- a/tests/database.ipynb
+++ b/tests/database.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First Directory at : \\01_DEV_Function\\Shared_Function\\unittest_example\n",
+      "First Directory at : \\01_DEV_Function\\Shared_Function\\tests\n",
       "Load Setting OK\n",
       "Change Directory into : \\01_DEV_Function\\Shared_Function\n"
      ]
@@ -36,7 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_library = True"
+    "local_library = True\n",
+    "local_library = False"
    ]
   },
   {
@@ -59,8 +60,24 @@
      "output_type": "stream",
      "text": [
       "Connection OK\n",
-      "Start Filter Existing data from df at  2020-12-03 17:35:56.960085\n",
-      "Dump data to  unit_test_git  End  2020-12-03 17:35:57.153615\n"
+      "Start Filter Existing data from df at  2020-12-06 19:11:13.145703\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "."
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dump data to  unit_test_git  End  2020-12-06 19:11:13.450548\n",
+      "Connection OK\n",
+      "Start Filter Existing data from df at  2020-12-06 19:11:14.386789\n",
+      "Dump data to  unit_test_git  End  2020-12-06 19:11:14.554509\n"
      ]
     },
     {
@@ -75,8 +92,8 @@
      "output_type": "stream",
      "text": [
       "Connection OK\n",
-      "Start Filter Existing data from df at  2020-12-03 17:35:58.140087\n",
-      "Dump data to  unit_test_git  End  2020-12-03 17:35:58.329327\n"
+      "Start Filter Existing data from df at  2020-12-06 19:11:15.458006\n",
+      "Dump data to  unit_test_git  End  2020-12-06 19:11:15.638351\n"
      ]
     },
     {
@@ -90,23 +107,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connection OK\n",
-      "Start Filter Existing data from df at  2020-12-03 17:35:59.258694\n",
-      "Dump data to  unit_test_git"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "."
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  End  2020-12-03 17:35:59.452361\n",
       "Connection OK\n"
      ]
     },
@@ -122,78 +122,9 @@
      "output_type": "stream",
      "text": [
       "Connection OK\n",
-      "Start delete old data at 2020-12-03 17:36:01.518434\n",
-      "Delete Last ['col1'] at 2020-12-03 17:36:01.608370\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "."
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dump data to  unit_test_git  End  2020-12-03 17:36:01.754600\n",
-      "Connection OK\n",
-      "Start delete old data at 2020-12-03 17:36:02.824003\n",
-      "Delete Last col1 at 2020-12-03 17:36:02.888649\n",
-      "Dump data to  unit_test_git  End  "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "."
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2020-12-03 17:36:03.028564\n",
-      "Connection OK\n",
-      "Start delete old data at 2020-12-03 17:36:03.967220\n",
-      "Delete Last ['col1', 'col2'] at 2020-12-03 17:36:04.040897\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "."
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dump data to  unit_test_git  End  2020-12-03 17:36:04.174505\n",
-      "Connection OK\n",
-      "Start delete old data at 2020-12-03 17:36:05.104036\n",
-      "Delete Last ['col1', 'col2', 'col3'] at 2020-12-03 17:36:05.179664\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "."
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dump data to  unit_test_git  End  2020-12-03 17:36:05.332182\n",
-      "Connection OK\n",
-      "Start delete old data at 2020-12-03 17:36:06.258847\n",
-      "Delete Last ['col1'] at 2020-12-03 17:36:06.328676\n",
-      "Dump data to  unit_test_git  End  2020-12-03 17:36:06.468367\n"
+      "Start delete old data at 2020-12-06 19:11:17.702584\n",
+      "Delete Last ['col1'] at 2020-12-06 19:11:17.777560\n",
+      "Dump data to  unit_test_git  End  2020-12-06 19:11:17.914086\n"
      ]
     },
     {
@@ -208,10 +139,8 @@
      "output_type": "stream",
      "text": [
       "Connection OK\n",
-      "Start Filter Existing data from df at  2020-12-03 17:36:07.418642\n",
-      "Dump data to  unit_test_git  End  2020-12-03 17:36:07.909316\n",
-      "Start delete old data at 2020-12-03 17:36:07.910353\n",
-      "Delete Last ['date'] at 2020-12-03 17:36:07.978564\n"
+      "Start delete old data at 2020-12-06 19:11:19.060645\n",
+      "Delete Last col1 at 2020-12-06 19:11:19.138707\n"
      ]
     },
     {
@@ -225,7 +154,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dump data to  unit_test_git  End  2020-12-03 17:36:08.121438\n",
+      "Dump data to  unit_test_git  End  2020-12-06 19:11:19.263983\n",
+      "Connection OK\n",
+      "Start delete old data at 2020-12-06 19:11:20.260498\n",
+      "Delete Last ['col1', 'col2'] at 2020-12-06 19:11:20.358907\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "."
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dump data to  unit_test_git  End  2020-12-06 19:11:20.480800\n",
+      "Connection OK\n",
+      "Start delete old data at 2020-12-06 19:11:21.435756\n",
+      "Delete Last ['col1', 'col2', 'col3'] at 2020-12-06 19:11:21.511418\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "."
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dump data to  unit_test_git  End  2020-12-06 19:11:21.655988\n",
+      "Connection OK\n",
+      "Start delete old data at 2020-12-06 19:11:22.577256\n",
+      "Delete Last ['col1'] at 2020-12-06 19:11:22.646420\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "."
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dump data to  unit_test_git  End  2020-12-06 19:11:22.778490\n",
+      "Connection OK\n",
+      "Start Filter Existing data from df at  2020-12-06 19:11:23.934789\n",
+      "Dump data to  unit_test_git  End  2020-12-06 19:11:24.424075\n",
+      "Start delete old data at 2020-12-06 19:11:24.424075\n",
+      "Delete Last ['date'] at 2020-12-06 19:11:24.494062\n",
+      "Dump data to  unit_test_git  End  2020-12-06 19:11:24.614510\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "."
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Connection OK\n"
      ]
     },
@@ -241,7 +240,7 @@
      "output_type": "stream",
      "text": [
       "Connection OK\n",
-      "Start Filter Existing data from df at  2020-12-03 17:36:10.138879\n"
+      "Start Filter Existing data from df at  2020-12-06 19:11:26.496116\n"
      ]
     },
     {
@@ -255,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dump data to  unit_test_git  End  2020-12-03 17:36:10.638629\n"
+      "Dump data to  unit_test_git  End  2020-12-06 19:11:27.222242\n"
      ]
     },
     {
@@ -264,7 +263,7 @@
      "text": [
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 12 tests in 14.688s\n",
+      "Ran 12 tests in 15.762s\n",
       "\n",
       "OK\n"
      ]
@@ -272,7 +271,7 @@
     {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x28757f7d908>"
+       "<unittest.main.TestProgram at 0x2354df5df08>"
       ]
      },
      "execution_count": 3,
@@ -284,7 +283,7 @@
     "if local_library : \n",
     "    da_tran_SQL = imp.load_source('da_tran_SQL', 'Shared_Function/data_connection/database.py').da_tran_SQL\n",
     "else :\n",
-    "    from Shared_Function.data_connection.database import da_tran_SQL\n",
+    "    from py_topping.data_connection.database import da_tran_SQL\n",
     "\n",
     "def help_test(df_in1, df_in2) :\n",
     "        result = list()\n",
@@ -413,13 +412,6 @@
     "        \n",
     "unittest.main(argv = ['first-arg-is-ignored'], exit = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
