Add coming soon to samples/database

--- a/samples/database.ipynb
+++ b/samples/database.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -45,12 +45,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Working with da_tra_SQL "
+    "# Working with da_tran_SQL "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "4     5     3 2020-10-14     1"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "4     5     3 2020-10-14     1"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "1     2     1 2020-10-11     1"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "0     3     2 2020-10-12     1"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
        "4     5     3 2020-10-14     1"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,15 +641,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start Filter Existing data from df at  2020-12-07 16:21:45.971968\n",
-      "Dump data to  unit_test_git  End  2020-12-07 16:21:46.453276\n"
+      "Start Filter Existing data from df at  2020-12-07 16:32:14.780796\n",
+      "Dump data to  unit_test_git  End  2020-12-07 16:32:15.322504\n"
      ]
     },
     {
@@ -728,7 +728,7 @@
        "4     8     5 2020-10-16     2"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
        "4     5     3 2020-10-14     1"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
        "4     8     5 2020-10-16     2"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,16 +940,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start delete old data at 2020-12-07 16:03:10.005450\n",
-      "Delete Last ['col1'] at 2020-12-07 16:03:10.073552\n",
-      "Dump data to  unit_test_git  End  2020-12-07 16:03:10.194111\n"
+      "Start delete old data at 2020-12-07 16:32:16.190836\n",
+      "Delete Last ['col1'] at 2020-12-07 16:32:16.276459\n",
+      "Dump data to  unit_test_git  End  2020-12-07 16:32:16.421067\n"
      ]
     },
     {
@@ -1052,7 +1052,7 @@
        "7     8     5 2020-10-16     2"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
        "4     5     3 2020-10-14     1"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,16 +1162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start delete old data at 2020-12-07 16:03:17.686332\n",
-      "Delete Last ['col1', 'col2'] at 2020-12-07 16:03:17.753112\n",
-      "Dump data to  unit_test_git  End  2020-12-07 16:03:17.862148\n"
+      "Start delete old data at 2020-12-07 16:32:17.249637\n",
+      "Delete Last ['col1', 'col2'] at 2020-12-07 16:32:17.331459\n",
+      "Dump data to  unit_test_git  End  2020-12-07 16:32:17.469107\n"
      ]
     },
     {
@@ -1282,7 +1282,7 @@
        "8     8     5 2020-10-16     2"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,16 +1310,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start delete old data at 2020-12-07 16:07:16.601986\n",
-      "Delete Last ['date'] at 2020-12-07 16:07:16.671266\n",
-      "Dump data to  unit_test_git  End  2020-12-07 16:07:16.787074\n"
+      "Start delete old data at 2020-12-07 16:32:18.201008\n",
+      "Delete Last ['date'] at 2020-12-07 16:32:18.289947\n",
+      "Dump data to  unit_test_git  End  2020-12-07 16:32:18.462276\n"
      ]
     },
     {
@@ -1414,7 +1414,7 @@
        "6     8     5 2020-10-16     2"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1444,16 +1444,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start delete old data at 2020-12-07 16:10:09.533461\n",
-      "Delete Last ['col1', 'date'] at 2020-12-07 16:10:09.602346\n",
-      "Dump data to  unit_test_git  End  2020-12-07 16:10:09.717251\n"
+      "Start delete old data at 2020-12-07 16:32:19.256544\n",
+      "Delete Last ['col1', 'date'] at 2020-12-07 16:32:19.336450\n",
+      "Dump data to  unit_test_git  End  2020-12-07 16:32:19.481182\n"
      ]
     },
     {
@@ -1556,7 +1556,7 @@
        "7     8     5 2020-10-16     2"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1587,16 +1587,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start delete old data at 2020-12-07 16:12:17.732452\n",
-      "Delete Last ['col1', 'col2'] at 2020-12-07 16:12:17.807109\n",
-      "Dump data to  unit_test_git  End  2020-12-07 16:12:17.917653\n"
+      "Start delete old data at 2020-12-07 16:32:20.250690\n",
+      "Delete Last ['col1', 'col2'] at 2020-12-07 16:32:20.342339\n",
+      "Dump data to  unit_test_git  End  2020-12-07 16:32:20.489196\n"
      ]
     },
     {
@@ -1707,7 +1707,7 @@
        "8     8     5 2020-10-16     2"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1730,17 +1730,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start delete old data at 2020-12-07 16:12:51.629218\n",
-      "Delete Last ['col1', 'date'] at 2020-12-07 16:12:51.696378\n",
+      "Start delete old data at 2020-12-07 16:32:20.549220\n",
+      "Delete Last ['col1', 'date'] at 2020-12-07 16:32:20.633297\n",
       "delete from unit_test_git where [col1] >= 4 and [date] >= '2020-10-12'\n",
-      "Dump data to  unit_test_git  End  2020-12-07 16:12:51.809071\n"
+      "Dump data to  unit_test_git  End  2020-12-07 16:32:20.767764\n"
      ]
     },
     {
@@ -1843,7 +1843,7 @@
        "7     8     5 2020-10-16     2"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1872,7 +1872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
        "4     5     3 2020-10-14     1"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1964,15 +1964,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start Filter Existing data from df at  2020-12-07 16:15:12.086584\n",
-      "Dump data to  unit_test_git  End  2020-12-07 16:15:12.247338\n"
+      "Start Filter Existing data from df at  2020-12-07 16:32:21.531746\n",
+      "Dump data to  unit_test_git  End  2020-12-07 16:32:21.732196\n"
      ]
     },
     {
@@ -2075,7 +2075,7 @@
        "7     8     5 2020-10-16     2"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2095,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2104,15 +2104,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start Filter Existing data from df at  2020-12-07 16:16:03.950851\n",
-      "Dump data to  unit_test_git  End  2020-12-07 16:16:04.117182\n"
+      "Start Filter Existing data from df at  2020-12-07 16:32:22.473215\n",
+      "Dump data to  unit_test_git  End  2020-12-07 16:32:22.665463\n"
      ]
     },
     {
@@ -2223,7 +2223,7 @@
        "8     8     5 2020-10-16     2"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2232,6 +2232,54 @@
     "mssql.dump_new(df2, tb, list_key = ['col1','col2'])\n",
     "\n",
     "mssql.read(tb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MySQL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coming Soon..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PostGreSQL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coming Soon..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OracleSQL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coming Soon..."
    ]
   }
  ],
