Add Sample for MySQL in samples/database.ipynb

--- a/samples/database.ipynb
+++ b/samples/database.ipynb
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "for SQL Server the <b>sql_type must == \"MSSQL\"</b>\n",
+    "for SQL Server the <b>sql_type must == \"MSSQL\" (ignore case sensitive in version >= 0.1.3)</b>\n",
     "  \n",
     "    \n",
     "by Default, the class will using pymssql as driver and port 1433\n",
@@ -2243,11 +2243,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MYSQL\n"
+     ]
+    }
+   ],
    "source": [
-    "# Coming Soon..."
+    "set_mysql = setting['MYSQL']\n",
+    "print(set_mysql['type'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create connection to server"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "mysql = da_tran_SQL(sql_type = set_mysql['type'],\n",
+    "                host_name = set_mysql['host'],\n",
+    "                database_name = set_mysql['database'],\n",
+    "                user = set_mysql['user'],\n",
+    "                password = set_mysql['password'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Same as SQL Server, For MySQL the <b>sql_type must == \"MYSQL\" (ignore case sensitive)</b>\n",
+    "<br><br>\n",
+    "by Default, the class will using pymysql as driver and port 3306\n",
+    "<br><br>\n",
+    "But you could also change them if you want like below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "mysql = da_tran_SQL(sql_type = set_mysql['type'],\n",
+    "                host_name = set_mysql['host'],\n",
+    "                database_name = set_mysql['database'],\n",
+    "                user = set_mysql['user'],\n",
+    "                password = set_mysql['password'],\n",
+    "                port = '3306',\n",
+    "                driver = 'pymysql')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Every Method and Function are the same as SQL Server.</b>"
    ]
   },
   {
