Add sample for PostGreSQL in samples/database

--- a/samples/database.ipynb
+++ b/samples/database.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2337,11 +2337,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POSTGRESQL\n"
+     ]
+    }
+   ],
    "source": [
-    "# Coming Soon..."
+    "set_plsql = setting['POSTGRESQL']\n",
+    "print(set_plsql['type'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create connection to server"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "plsql = da_tran_SQL(sql_type = set_plsql['type'],\n",
+    "                host_name = set_plsql['host'],\n",
+    "                database_name = set_plsql['database'],\n",
+    "                user = set_plsql['user'],\n",
+    "                password = set_plsql['password'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Same as SQL Server, For MySQL the <b>sql_type must == \"MYSQL\" (ignore case sensitive)</b>\n",
+    "<br><br>\n",
+    "by Default, the class will using pymysql as driver and port 3306\n",
+    "<br><br>\n",
+    "But you could also change them if you want like below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "plsql = da_tran_SQL(sql_type = set_plsql['type'],\n",
+    "                host_name = set_plsql['host'],\n",
+    "                database_name = set_plsql['database'],\n",
+    "                user = set_plsql['user'],\n",
+    "                password = set_plsql['password'],\n",
+    "                port = '5432',\n",
+    "                driver = 'psycopg2')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Every Method and Function are the same as SQL Server.<br>\n",
+    "Except PostGreSQL still can't use Store Procedure or Function yet</b>"
    ]
   },
   {
