add sample of da_tran_SP_PRIM in samples/sharepoint.ipynb

--- a/samples/sharepoint.ipynb
+++ b/samples/sharepoint.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -24,8 +24,11 @@
     }
    ],
    "source": [
-    "import os, re,json\n",
+    "import os, re,json, imp\n",
     "import pandas as pd\n",
+    "\n",
+    "local_library = True\n",
+    "#local_library = False\n",
     "\n",
     "first_wd = os.getcwd()\n",
     "print('First Directory at :', os.getcwd()[2:])\n",
@@ -54,7 +57,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from py_topping.data_connection.sharepoint import da_tran_SP365"
+    "os.chdir(re.sub(os.getcwd().split('\\\\')[-1]+'$','',os.getcwd()))\n",
+    "print('Change Directory into :', os.getcwd()[2:])\n",
+    "\n",
+    "if local_library : \n",
+    "    da_tran_SP365 = imp.load_source('da_tran_SQL', 'py_topping/data_connection/sharepoint.py').da_tran_SP365\n",
+    "else :\n",
+    "    from py_topping.data_connection.sharepoint import da_tran_SP365\n",
+    "    \n",
+    "os.chdir(first_wd)\n",
+    "print('Change back to :', os.getcwd()[2:])"
    ]
   },
   {
@@ -497,6 +509,103 @@
    "source": [
     "sp.download(sharepoint_location = link_csv.replace('.csv','2.csv')\n",
     "            , as_dataframe = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Working with da_tran_SP_PRIM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Change Directory into : \\01_DEV_Function\\Shared_Function\n",
+      "Change back to : \\01_DEV_Function\\Shared_Function\\samples\n"
+     ]
+    }
+   ],
+   "source": [
+    "os.chdir(re.sub(os.getcwd().split('\\\\')[-1]+'$','',os.getcwd()))\n",
+    "print('Change Directory into :', os.getcwd()[2:])\n",
+    "\n",
+    "if local_library : \n",
+    "    da_tran_SP_PRIM = imp.load_source('da_tran_SQL', 'py_topping/data_connection/sharepoint.py').da_tran_SP_PRIM\n",
+    "else :\n",
+    "    from py_topping.data_connection.sharepoint import da_tran_SP_PRIM\n",
+    "    \n",
+    "os.chdir(first_wd)\n",
+    "print('Change back to :', os.getcwd()[2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_sp_p = setting['SP_PRIM']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Connection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp_p = da_tran_SP_PRIM(set_sp_p['user'], set_sp_p['password'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1st Method : download\n",
+    "\n",
+    "Download file with download url<br>\n",
+    "And Specific the local directory in \"local_location\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp_p.download(set_sp_p['download_link'],set_sp_p['local_file_download'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2nd Method : upload\n",
+    "\n",
+    "upload your file to sharepoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp_p.upload(set_sp_p['local_file_download'], set_sp_p['sharpoint_url']\n",
+    "            ,set_sp_p['sharepoint_folder'],set_sp_p['sharepoint_name'])"
    ]
   }
  ],
