--- a/samples/sharepoint.ipynb
+++ b/samples/sharepoint.ipynb
@@ -53,9 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Change Directory into : \\01_DEV_Function\\Shared_Function\n",
+      "Change back to : \\01_DEV_Function\\Shared_Function\\samples\n"
+     ]
+    }
+   ],
    "source": [
     "os.chdir(re.sub(os.getcwd().split('\\\\')[-1]+'$','',os.getcwd()))\n",
     "print('Change Directory into :', os.getcwd()[2:])\n",
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,12 +91,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create Connection"
+    "## Create Connection\n",
+    "### With User and Password"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +109,33 @@
     }
    ],
    "source": [
-    "sp = da_tran_SP365(set_sp365['url'], set_sp365['cli_id'], set_sp365['cli_secret'])"
+    "sp = da_tran_SP365(set_sp365['url'], user = set_sp365['user'], password = set_sp365['password'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With App Only\n",
+    "\n",
+    "read more about app only here : https://docs.microsoft.com/en-us/sharepoint/dev/solution-guidance/security-apponly-azuread"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Authen OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "sp = da_tran_SP365(set_sp365['url'], client_id = set_sp365['cli_id'], client_secret = set_sp365['cli_secret'])"
    ]
   },
   {
@@ -113,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +239,7 @@
        "2    c     3"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
