Add sample of dump_whole with fix_table parameter in samples/database.ipynb

--- a/samples/database.ipynb
+++ b/samples/database.ipynb
@@ -743,6 +743,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In case that you would like to fixe original table's columns and types\n",
+    "\n",
+    "You could add parameter fix_table = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1, df2, tb, sp = setup_sample(mssql)\n",
+    "mssql.read(tb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mssql.dump_whole(df2, tb , fix_table = True) \n",
+    "\n",
+    "mssql.read(tb).info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3rd Method : dump_replace\n",
     "\n",
     "You could update the existing dataframe by using this method"
