update new parameter in samples/database

--- a/samples/database.ipynb
+++ b/samples/database.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,6 +149,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**from version >= 0.1.9**<br>\n",
+    "You could fine tune insert's speed by adjust these parameters into the da_tran_SQL class :\n",
+    "- chunksize, chunksize parameter in pandas' to_sql method (Default Value 150)\n",
+    "- partition_size,  dataframe will divide into smaller size as partition_size before dump (Default Value 5,000)\n",
+    "- parallel_dump, to activate parallel dump (Default Value False)\n",
+    "- max_parallel, number of parellel dump execute pertime (Default Value 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "mssql = da_tran_SQL(sql_type = set_mssql['type'],\n",
+    "                host_name = set_mssql['host'],\n",
+    "                database_name = set_mssql['database'],\n",
+    "                user = set_mssql['user'],\n",
+    "                password = set_mssql['password'],\n",
+    "                port = '1433',\n",
+    "                driver = 'pymssql',\n",
+    "                chunksize = 150, \n",
+    "                partition_size = 5000,\n",
+    "                parallel_dump = False,\n",
+    "                max_parallel = 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The da_tran_SQL class also has engine method which equal to engine in sqlalchemy\n",
     "\n",
     "Which I'm going to use it to set up sample environment that include,\n",
@@ -159,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +277,7 @@
        "4     5     3 2020-10-14     1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +668,7 @@
        "4     5     3 2020-10-14     1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,15 +680,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start Filter Existing data from df at  2020-12-07 16:32:14.780796\n",
-      "Dump data to  unit_test_git  End  2020-12-07 16:32:15.322504\n"
+      "Start Filter Existing data from df at  2020-12-21 15:21:48.335225\n",
+      "Dump data to  unit_test_git  End  2020-12-21 15:21:48.796113\n"
      ]
     },
     {
@@ -728,7 +767,7 @@
        "4     8     5 2020-10-16     2"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,38 +782,202 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In case that you would like to fixe original table's columns and types\n",
-    "\n",
-    "You could add parameter fix_table = True"
+    "By the way, **dump_whole will use columns and types as the New DataFrame**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start Filter Existing data from df at  2020-12-21 15:21:52.871543\n",
+      "Dump data to  unit_test_git  End  2020-12-21 15:21:53.824815\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "col2             int64\n",
+       "date    datetime64[ns]\n",
+       "col3             int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mssql.dump_whole(df2.drop('col1', axis = 1) , tb)\n",
+    "\n",
+    "mssql.read(tb).dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In case that you would like to fixe original table's columns and types\n",
+    "\n",
+    "You could add parameter **fix_table = True**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "col1            object\n",
+       "col2             int64\n",
+       "date    datetime64[ns]\n",
+       "col3             int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df1, df2, tb, sp = setup_sample(mssql)\n",
+    "\n",
+    "mssql.engine.execute(\"\"\"ALTER TABLE {} ALTER COLUMN col1 varchar(10)\"\"\".format(tb))\n",
+    "\n",
+    "mssql.read(tb).dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start Filter Existing data from df at  2020-12-21 15:22:12.178765\n",
+      "Dump data to  unit_test_git  End  2020-12-21 15:22:12.392116\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "      <th>date</th>\n",
+       "      <th>col3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>None</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2020-10-12</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>None</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2020-10-13</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2020-10-14</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2020-10-15</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>None</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2020-10-16</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col1  col2       date  col3\n",
+       "0  None     3 2020-10-12     2\n",
+       "1  None     3 2020-10-13     2\n",
+       "2  None     4 2020-10-14     2\n",
+       "3  None     4 2020-10-15     2\n",
+       "4  None     5 2020-10-16     2"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mssql.dump_whole(df2.drop('col1', axis = 1), tb , fix_table = True) \n",
+    "\n",
     "mssql.read(tb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "col1            object\n",
+       "col2             int64\n",
+       "date    datetime64[ns]\n",
+       "col3             int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mssql.dump_whole(df2, tb , fix_table = True) \n",
-    "\n",
-    "mssql.read(tb).info()"
+    "mssql.read(tb).dtypes"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
